# TaskRegistry

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  run.bat  run.py
.github/workflows/: ci.yml  pr-validation.yml
.opencode/agents/: applitacionArquitect.md  businessAnalyst.md  fullstackDeveloper.md  projectPlanner.md  uiUxDesigner.md
.opencode/scripts/: validate-commit-msg.py
.opencode/skills/: commit-standards.md
core/: config.py  database.py  dependencies.py  logging_config.py
docs/: index.md
docs/architecture/: ADR-001-stack-tecnologico.md  ADR-002-estructura-proyecto.md  ADR-003-patrones-diseno.md  ADR-004-devops.md  README.md  diagrama-contenedores.md  diagrama-contexto.md  estructura-propuesta.md
docs/diseño/: UI-design-system.md  UI-flujos-documentacion.md  UI-flujos-proyectos.md  UI-flujos-sincronizacion.md  UI-flujos-tablero.md  UI-flujos-tareas.md  UI-mockups-documentacion.md  UI-mockups-proyectos.md  UI-mockups-sincronizacion.md  UI-mockups-tablero.md  UI-mockups-tareas.md
docs/general/: 01-Modulo-Proyectos.md  02-Modulo-Tareas.md  03-Modulo-Documentacion.md  04-Modulo-Sincronizacion-Azure.md  05-Modulo-Tablero-Control.md  06-Reglas-Negocio.md  README.md
docs/planning/: backlog.md  definition-of-done.md  sprint-000.md  sprint-001.md  sprint-002.md
proyectos/: esquemas.py  modelos.py  repositorio.py  router.py  servicios.py
static/css/: estilos.css
tests/: conftest.py  test_config.py  test_database.py  test_main.py
tests/core/: test_config.py  test_dependencies.py  (+1 more)
(+11 files in other folders)
